# palace

./: .appveyor.yml  .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  alure.pxd  archaicy.pyx  contributing.html  copying.html  design.html  genindex.html  index.html  installation.html  make.bat  objects.inv  palace.pyx  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.ci/: before-build-macos  before-build-manylinux2014  repair-whl-macos
.github/: FUNDING.yml
.travis/: cibw-before-build-manylinux2014
docs/: Makefile
doctrees/: contributing.doctree  copying.doctree  design.doctree  environment.pickle  index.doctree  installation.doctree  reference.doctree  tutorial.doctree
examples/: archaicy-enum.py  archaicy-hrtf.py  archaicy-play.py  palace-enum.py  palace-event.py  palace-hrtf.py  palace-info.py  palace-latency.py  palace-play.py  palace-reverb.py  palace-stdec.py  palace-tonegen.py
html/: .buildinfo  contributing.html  copying.html  design.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorial.html
reference/: buffer.html  context.html  decoder.html  device.html  effect.html  file-io.html  index.html  source.html
source/: conf.py
src/: alure.pxd  bases.h  bases.pxd  conf.py  contributing.rst  copying.rst  efx-predef.h  index.rst  installation.rst  palace.pyx  reference.rst  std.pxd  util.h  util.pxd
tests/: conftest.py  test_context.py  test_source.py
tutorial/: context.html  index.html  (+3 more)
(+80 files in other folders)
